Terminando la clase CheckUser